test/gpu/native/assertOnFailToGpuizeAttr.1.good
assertOnFailToGpuizeAttr.chpl:12: In function 'funcMarkedNotGpuizableThatTriesToGpuize':
assertOnFailToGpuizeAttr.chpl:14: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
assertOnFailToGpuizeAttr.chpl:12: note: parent function disallows execution on a GPU
